@@ -10,10 +10,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:id="@+id/attribute_detail_pager_container"
-                 android:layout_width="match_parent"
-                 android:layout_height="match_parent"
-                 tools:ignore="MergeRootFrame"/>
+    <FrameLayout
+            android:id="@+id/attribute_detail_pager_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:ignore="MergeRootFrame"/>
 
 </LinearLayout>
