@@ -4,14 +4,14 @@
               android:orientation="vertical"
               android:padding="?attr/standardPadding">
 
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/node_label"
-              style="?android:attr/textAppearanceLarge"
-              android:focusable="true"
-              android:focusableInTouchMode="true"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:paddingBottom="?attr/standardPadding"/>
+    <TextView
+            android:id="@+id/node_label"
+            style="?android:attr/textAppearanceLarge"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingBottom="?attr/standardPadding"/>
 
     <TextView
             android:id="@+id/node_description"
