@@ -21,9 +21,13 @@ Install an update
 Changes
 -------
 
+2014-06-27
+
+    * Current SRS for coordinate wasn't selected in spinner.
+
 2014-06-13b
 
-    * Stopped transforming coordinates when spatial reference system changes.
+    * Stopped transforming coordinates when spatial reference system changes
     * Defaulted time picker to current time, if time is unspecified
 
 2014-06-13
